correction de bug graphique alignement boutons

--- a/app/webroot/less/global.less
+++ b/app/webroot/less/global.less
@@ -94,3 +94,8 @@ header{
 	top: 0px;
 	line-height: 50px;
 }
+
+td .button-group a,
+td .button-group button{
+	margin: 0;
+}
