--- a/app/webroot/less/table.less
+++ b/app/webroot/less/table.less
@@ -80,4 +80,10 @@
 
 .grille-gestion input, .grille-gestion select{
 	width: 80px;
+	height: 24px;
+	line-height: 24px;
+}
+
+.grille-gestion input[type="number"]{
+	padding: 0px;
 }
